fix: shop and navbar css overlap fix, add additional alert in addtocart

--- a/frontend/users-auth/src/components/Navbar.css
+++ b/frontend/users-auth/src/components/Navbar.css
@@ -8,6 +8,7 @@
     padding: 8px;
     position: sticky;
     top: 0;
+    z-index: 100;
 }
 
 .headerTitle{
@@ -16,6 +17,7 @@
     font-size: 37px;
     font-style: italic;
     padding: 8px;
+    color:white;
 }
 
 .navsContainer{
