--- a/frontend/users-auth/src/pages/pages_css/shop_css/Shop.css
+++ b/frontend/users-auth/src/pages/pages_css/shop_css/Shop.css
@@ -66,7 +66,7 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
   border-radius: 8px;
   position: sticky;
-  top: 20px; 
+  top: 140px; 
   height: fit-content; 
   height: 800px; 
   overflow-y: auto; 
